--- a/registration_form.html
+++ b/registration_form.html
@@ -7,7 +7,68 @@
     <title>Document</title>
 </head>
 <body>
-    <p>dkl;naf;eio</p>
-    <p>koninagoeg</p>
+    <h1>Registration Form</h1>
+    <div>
+        <label>First Name: * </label>
+        <input type="text">
+    </div>
+    <div>
+        <label>Last Name: * </label>
+        <input type="text">
+    </div>
+    <div>
+        <label>Email Address: * </label>
+        <input type="text">
+    </div>
+    <div>
+        <label>Password: * </label>
+        <input type="password">
+    </div>
+    <div>
+        <label>Confirm Password: * </label>
+        <input type="password">
+    </div>
+    <div>
+        <label>Birthday: </label>
+        <input type="date">
+    </div>
+    <div>
+        <label>Gender Identity: </label>
+    </div>
+    <div>
+        <input type="radio" name="male" id="male" value="normal">
+            <label for="male">Male </label>
+        <input type="radio" name="Female" id="Female" value="normal">
+            <label for="Female">Female </label> 
+        <input type="radio" name="nonbinary" id="nonbinary" value="normal">
+            <label for="nonbinary">Non-binary </label>
+        <input type="radio" name="prefernottoanswer" id="prefernottoanswer" value="normal">
+            <label for="prefernottoanswer">I prefer not to answer </label>
+    </div>
+    <div>
+        <label>A short description about myself: </label>
+    </div>
+    <div>
+        <textarea name="comment" cols="35" rows="3"></textarea>
+    </div>
+    <div>
+        <label>Favorite Language: </label>
+        <select name="language">
+            <option>JavaScript</option>
+            <option>Python</option>
+            <option>Java</option>
+            <option>C++</option>
+        </select>
+    </div>
+    <div>
+        <input type="checkbox" name="emailupdates" id="emailupdates">
+        <label for="emailupdates">Yes, I would like to receive periodic email updates</label>
+    </div>
+    <div>
+        <button>Create Account</button>
+    </div>
+    <div>
+        <label>* Indicates a required field</label>
+    </div>
 </body>
 </html>
